--- a/src/style.scss
+++ b/src/style.scss
@@ -23,6 +23,7 @@ $footer-backround: rgb(31, 31, 31);
 
 body {
   margin: 0;
+  /* background: $black; */
 }
 ::-webkit-scrollbar {
   background: rgb(200, 200, 200);
@@ -31,9 +32,6 @@ body {
   background: rgb(121, 121, 121);
 }
 
-main {
-  background: $black;
-}
 
 
 
@@ -54,7 +52,7 @@ main {
 /**
  * ^Navigation Bar
  */
-.nav {
+/* .nav {
   background: $black;
   width: 100%;
   padding: 0;
@@ -83,178 +81,246 @@ main {
     }
   }
   &__link {
-    /* Resume Button */
-    height: 54px;
+    height: 50px;
     width: 150px;
     font-size: 1.5rem;
     font-family: "Ubuntu", sans-serif;
+    line-height: 50px;
     display: block;
     color: $white;
     transition: 0.2s;
     border-radius: 2rem;
+    border: solid 3px $blue-primary;
     text-decoration: none;
-    line-height: 48px;
     text-align: center;
     &:hover {
       color: $black;
-      font-size: 160%;
+      cursor: pointer;
+      background: $blue-primary;
+      box-shadow: 0 0 10px 15px $blue-shadow;
     }
   }
-}
+} */
 
 
 
 /**
- * ^Main Section (About)
+ * ^About Section
  */
 .about {
-  width: 90%;
-  /* height: 200%; */
   color: $white;
-  padding: 40px 0;
-  margin: auto;
-  font-size: 16px;
+  background: $black;
+  padding: 100px 0 60px 0;
+  margin: 0;
+  /* font-size: 16px; */
   text-align: center;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  &__container {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+
+  }
   &__title {
     margin: 0;
     font-size: $header1;
     font-family:"K2D", sans-serif;
-    letter-spacing: 2px;
+    /* letter-spacing: 2px; */
     animation: fadeUp 200ms ease-out 400ms backwards;
   }
   &__skills {
-    font-size: 1rem;
+    margin: 0;
+    font-size: 1.2rem;
     animation: fadeUp 200ms ease-out 400ms backwards;
   }
-  &__name {
+  /* &__name {
     margin: 80px 0 20px 0;
     font-size: $header2;
     font-family:"K2D", sans-serif;
     animation: fadeUp 200ms ease-out 600ms backwards;
-  }
+  } */
   &__description {
-    width: 100%;
-    margin: 0 auto;
+    /* width: calc(100% - 200px); */
+    padding: 0 15px;
+    margin: 0;
     font-size: 1.2rem;
     line-height: 1.6em;
     letter-spacing: -1px;
     word-spacing: 2px;
     animation: fadeUp 200ms ease-out 600ms backwards;
   }
+  &__resume {
+    height: 50px;
+    width: 150px;
+    font-size: 1.5rem;
+    font-family: "Ubuntu", sans-serif;
+    line-height: 50px;
+    display: block;
+    color: $white;
+    transition: 0.2s;
+    border-radius: 2rem;
+    border: solid 3px $blue-primary;
+    text-decoration: none;
+    text-align: center;
+    &:hover {
+      color: $black;
+      cursor: pointer;
+      background: $blue-primary;
+      box-shadow: 0 0 10px 15px $blue-shadow;
+    }
+  }
 }
 
 
 
 /**
- * ^Projects Section (Section 2)
+ * ^Main Section
  * 
- * ^with banner and individual projects
+ * ^banner, projects, and certs
  */
-.section2 {
-  animation: fadeUp 400ms ease 800ms backwards;
-  display: flex;
-  flex-direction: column;
+.main {
+  background: $black;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    animation: fadeUp 400ms ease 800ms backwards;
+  }
   &__banner {
     height: 40px;
     width: 100%;
     margin: 0;
     overflow: hidden;
   }
-}
-.projects {
-  width: 100%;
-  padding: 0 0 40px 0;
-  background-color: $white-background;
   &__title {
     height: 140px;
     min-width: 240px;
+    background: $white-background;
     display: flex;
     align-items: center;
     justify-content: center;
-    &-text {
+    &__text {
       font-size: 2.2rem;
       color: $font-color;
       font-family:"K2D", sans-serif;
       letter-spacing: 1px;
     }
   }
-}
-.project {
-  /* Individual Project */
-  /* height: 440px; */
-  width: 85%;
-  margin: 0 auto 66px auto;
-  color: $font-color;
-  opacity: 0;
-  border-radius: 0.8rem;
-  padding: 3%;
-  margin-bottom: 66px;
-  text-align: center;
-  &__img {
-    height: 200px;
+  &__projects {
     width: 100%;
-    max-width: 300px;
-    margin: auto;
-    border-radius: 0.8rem;
+    padding: 0 0 40px 0;
+    background-color: $white-background;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  &__info {
-    min-height: 62px;
-    width: 100%;
-    margin: 20px auto;
-    position: relative;
+  &__project {
+    /* Individual Project */
+    /* height: 440px; */
+    width: 85%;
+    margin: 0 0 66px 0;
+    color: $font-color;
+    opacity: 0;
+    border-radius: 0.8rem;
+    padding: 40px 0;
     text-align: center;
-  }
-  &__title {
-    font-size: 1.6rem;
-    margin: 10px 0;
-    position: relative;
-    font-family:"K2D", sans-serif;
-  }
-  &__description {
-    width: 100%;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    word-spacing: 2px;
-    letter-spacing: -1px;
-    vertical-align: middle;
-  }
-  &__button {
-    height: 4rem;
-    width: 220px;
-    padding: 16px;
-    border: none;
-    border-bottom: 6px solid $blue-secondary;
-    border-radius: 0.8rem;
-    color: $black;
-    background: $blue-primary;
-    letter-spacing: 2px;
-    font-weight: bold;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    transition: all 0.1s;
-    &:hover {
-      cursor: pointer;
-      margin-top: 2px;
-      border-bottom-width: 3px;
-      box-shadow: 0 0 10px 15px $blue-shadow;
+    &__img {
+      height: 200px;
+      width: 100%;
+      max-width: 300px;
+      margin: auto;
+      border-radius: 0.8rem;
+      box-shadow: 0 0 20px 3px $blue-primary;
     }
-    &:active {
-      margin-top: 5px;
-      border-bottom-width: 0;
+    &__info {
+      min-height: 62px;
+      width: 100%;
+      margin: 20px auto;
+      position: relative;
+      text-align: center;
+      /* display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center; */
+    }
+    &__title {
+      font-size: 1.6rem;
+      margin: 10px 0;
+      position: relative;
+      font-family:"K2D", sans-serif;
+    }
+    &__description {
+      width: 100%;
+      font-size: 1.2rem;
+      line-height: 1.6rem;
+      word-spacing: 2px;
+      letter-spacing: -1px;
+      vertical-align: middle;
+    }
+    &__button {
+      height: 4rem;
+      width: 220px;
+      padding: 16px;
+      border: none;
+      border-bottom: 6px solid $blue-secondary;
+      border-radius: 0.8rem;
+      color: $black;
+      background: $blue-primary;
+      letter-spacing: 2px;
+      font-weight: bold;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      transition: all 0.1s;
+      &:hover {
+        cursor: pointer;
+        margin-top: 2px;
+        border-bottom-width: 3px;
+        box-shadow: 0 0 10px 15px $blue-shadow;
+      }
+      &:active {
+        margin-top: 5px;
+        border-bottom-width: 0;
+      }
+    }
+    &__animate {
+      animation-name: fadeIn;
+      animation-duration: 600ms;
+      animation-timing-function: ease-in;
+      animation-fill-mode: both;
+      -webkit-animation-name: fadeIn;
+      -webkit-animation-duration: 600ms;
+      -moz-animation-name: fadeIn;
+      -moz-animation-duration: 600ms;
+      -o-animation-name: fadeIn;
+      -o-animation-duration: 600ms;
     }
   }
-  &__animate {
-    /* Boolean Class For Animating (True/False) */
-    animation-name: fadeIn;
-    animation-duration: 800ms;
-    animation-timing-function: ease-in;
-    animation-fill-mode: both;
-    -webkit-animation-name: fadeIn;
-    -webkit-animation-duration: 800ms;
-    -moz-animation-name: fadeIn;
-    -moz-animation-duration: 800ms;
-    -o-animation-name: fadeIn;
-    -o-animation-duration: 800ms;
+  &__certificates {
+    background: $white-background;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__certificate {
+    width: 800px;
+    /* background: $white-background; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* &__container {
+      width: 1000px;
+    } */
+    &__img {
+      object-fit: contain;
+      /* height: 250px; */
+      width: 800px;
+      box-shadow: 0 0 20px 5px $blue-primary;
+    }
+    &__link {
+      
+    }
   }
 }
 
@@ -263,7 +329,7 @@ main {
 /**
  * ^Footer
  * 
- * ^The footer is displayed at the bottom of page.
+ * 
  */
 .footer {
   width: 100%;
@@ -358,10 +424,9 @@ main {
 
 
 /**
- * ^Fading Animations
+ * ^Keyframe Animations
  */
-
- @keyframes loadingFade {
+@keyframes loadingFade {
   from {background: $white;};
   to {background: $black;};
 }
@@ -421,77 +486,81 @@ main {
 
 
 /**
- * ^Scaling for Responsiveness
+ * ^Media Queries for Scaling and Responsiveness
  */
 @media only screen and (min-width: 850px) {
   /* Desktop */
   .about {
-    width: 100%;
-    min-width: 650px;
-    padding: 1.5% 0 2% 0;
-    margin: 0 0 2% 0;
+    /* width: 100%; */
+    /* min-width: 650px; */
+    /* padding: 1.5% 0 2% 0; */
+    /* margin: 0 0 2% 0; */
+    padding: 80px auto 40px auto;
+    &__container {
+      width: 1000px;
+    }
     &__title {
-      margin: 0 auto;
+      /* margin: 0 auto; */
     }
     &__skills {
       font-size: 1.3rem;
     }
-    &__name {
+    /* &__name {
       margin: 120px 0 20px 0;
-    }
+    } */
     &__description {
-      width: 28%;
-      min-width: 800px;
+      /* width: 28%;
+      min-width: 800px; */
+      padding: 25px 100px;
       font-size: 1.4rem;
     }
   }
 
-  .section2 {
+  .main {
     &__banner {
       height: 120px;
     }
-  }
-
-  .projects {
-    padding: 0 0 120px 0;
     &__title {
       height: 140px;
-      &-text {
+      &__text {
         font-size: $header1;
       }
     }
-  }
-  .project {
-    height: 240px;
-    width: 48%;
-    min-width: 800px;
-    max-width: 1000px;
-    margin: 0 auto;
-    &__img {
-      height: 100%;
-      width: 40%;
-      max-width: 400px;
+    &__projects {
+      /* padding: 0 0 120px 0; */
     }
-    &__info {
-      height: 100%;
-      width: 60%;
-      margin: auto;
-      float: right;
-    }
-    &__title {
-      font-size: $header2;
+    &__project {
+      height: 240px;
+      width: 100%;
+      min-width: 800px;
+      max-width: 1000px;
       margin: 0;
-    }
-    &__description {
-      height: 100px;
-      width: 80%;
-      font-size: 1.2rem;
-      margin: auto;
-      padding: 16px;
-    }
-    &__button {
-      height: 58px;
-      width: 288px;
+      &__img {
+        height: 100%;
+        width: 40%;
+        max-width: 400px;
+      }
+      &__info {
+        height: 100%;
+        width: 60%;
+        margin: auto;
+        float: right;
+      }
+      &__title {
+        font-size: $header2;
+        margin: 0;
+      }
+      &__description {
+        height: 100px;
+        width: 80%;
+        font-size: 1.2rem;
+        margin: auto;
+        padding: 16px;
+      }
+      &__button {
+        height: 58px;
+        width: 288px;
+      }
     }
   }
 }
