--- a/src/style.scss
+++ b/src/style.scss
@@ -108,32 +108,27 @@ body {
  * ^About Section
  */
 .about {
+  padding: 40px 0;
+  margin: 0;
+  text-align: center;
   color: $white;
   background: $black;
-  padding: 40px 0 40px 0;
-  margin: 0;
-  /* font-size: 16px; */
-  text-align: center;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
   &__container {
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
-    padding: 0 20px;
-
   }
   &__title {
     margin: 0;
     font-size: 2.4rem;
     font-family:"K2D", sans-serif;
-    /* letter-spacing: 2px; */
     animation: fadeUp 200ms ease-out 200ms backwards;
   }
   &__description {
-    /* width: calc(100% - 200px); */
+    max-width: 500px;
     padding: 20px 0;
     margin: 0;
     font-size: 1.2rem;
@@ -164,34 +159,25 @@ body {
       box-shadow: 0 0 10px 15px $blue-shadow;
     }
   }
-  /* &__name {
-    margin: 80px 0 20px 0;
-    font-size: $header2;
-    font-family:"K2D", sans-serif;
-    animation: fadeUp 200ms ease-out 600ms backwards;
-  } */
   &__skills {
     width: 100%;
+    max-width: 500px;
     padding: 20px 0;
     margin: 0;
     font-size: 0.8rem;
-    animation: fadeUp 200ms ease-out 800ms backwards;
     display: grid;
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: repeat(3, 33%);
     gap: 20px 0;
+    animation: fadeUp 200ms ease-out 800ms backwards;
   }
   &__skill {
-    /* height: auto; */
-    /* padding: 15px 0; */
     &__img {
       height: 50px;
       width: 50px;
     }
     &__title {
       margin: 0;
-      /* padding: 5px 0; */
-      /* font-size: 1rem; */
     }
   }
 }
@@ -217,7 +203,6 @@ body {
     overflow: hidden;
   }
   &__title {
-    /* height: 140px; */
     min-width: 240px;
     background: $white-background;
     display: flex;
@@ -226,8 +211,8 @@ body {
     &__text {
       padding: 20px 0;
       margin: 0;
-      font-size: 2.4rem;
       color: $font-color;
+      font-size: 2.4rem;
       font-family:"K2D", sans-serif;
       letter-spacing: 1px;
     }
@@ -241,25 +226,23 @@ body {
     align-items: center;
   }
   &__project {
-    /* Individual Project */
-    color: $font-color;
-    opacity: 0;
-    border-radius: 0.8rem;
+    max-width: 380px;
     padding: 40px 25px;
+    border-radius: 0.8rem;
+    color: $font-color;
     text-align: center;
+    opacity: 0;
     &__img {
       height: 200px;
       width: 100%;
       max-width: 300px;
       margin: auto;
       border-radius: 0.8rem;
-      /* box-shadow: 0 0 20px 3px $blue-primary; */
+      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.5);
     }
     &__info {
-      /* height: 280px; */
       min-height: 62px;
       width: 100%;
-      /* margin: 10px 0; */
       padding: 20px 0 0 0;
       position: relative;
       text-align: center;
@@ -275,7 +258,7 @@ body {
     }
     &__description {
       width: 100%;
-      /* margin: 0; */
+      max-width: 500px;
       font-size: 1.2rem;
       line-height: 1.6rem;
       word-spacing: 2px;
@@ -283,28 +266,28 @@ body {
       vertical-align: middle;
     }
     &__button {
-      height: 58px;
+      background-image: linear-gradient(rgb(141, 206, 255) 0, $blue-primary 20%);
+      border-radius: 8px;
+      border-style: none;
+      color: $font-color;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 1.4rem;
+      font-family: "K2D";
+      letter-spacing: 1px;
+      height: 50px;
+      line-height: 50px;
+      margin-left: -4px;
+      outline: 0;
+      text-align: center;
+      transition: all .3s cubic-bezier(.05, .03, .35, 1);
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      vertical-align: bottom;
       width: 200px;
-      padding: 16px;
-      border: none;
-      border-bottom: 6px solid $blue-secondary;
-      border-radius: 0.8rem;
-      color: $black;
-      background: $blue-primary;
-      letter-spacing: 2px;
-      font-weight: bold;
-      font-size: 20px;
-      font-family: Arial, Helvetica, sans-serif;
-      transition: all 0.1s;
       &:hover {
-        cursor: pointer;
-        margin-top: 2px;
-        border-bottom-width: 3px;
-        box-shadow: 0 0 10px 15px $blue-shadow;
-      }
-      &:active {
-        margin-top: 5px;
-        border-bottom-width: 0;
+        opacity: .6;
       }
     }
     &__animate {
@@ -337,7 +320,7 @@ body {
     &__img {
       object-fit: contain;
       width: 100%;
-      box-shadow: 0 0 20px 5px $blue-primary;
+      box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.5);
     }
     &__title {
       font-size: 1.6rem;
@@ -349,11 +332,9 @@ body {
     &__link {
       font-size: 1.2rem;
       text-decoration: none;
-      /* color: gold;
-      background: $black; */
       color: $font-color;
       position: relative;
-      transition: all 200ms ease-in-out;
+      transition: all 100ms ease-in-out;
       &::before {
         content: '';
         position: absolute;
@@ -362,10 +343,10 @@ body {
         height: 3px;
         background-color: $blue-primary;
         transform: scaleX(0);
-        transition: transform 200ms ease-in-out;
+        transition: transform 100ms ease-in-out;
       }
       &:hover {
-        /* color: $blue-primary; */
+        color: $blue-primary;
       }
       &:hover::before {
         transform: scaleX(1);
@@ -383,7 +364,7 @@ body {
  */
 .footer {
   width: 100%;
-  height: 140px;
+  padding: 26px 0;
   background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
@@ -394,6 +375,7 @@ body {
     height: 40px;
     width: 50%;
     max-width: 260px;
+    margin: 0 0 26px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -410,11 +392,10 @@ body {
       font-family: fontawesome;
       position: relative;
       display: inline-block;
-      /* padding-top: 10px; */
-      -o-transition: all .5s;
-      -webkit-transition: all .5s;
-      -moz-transition: all .5s;
-      transition: all .5s;
+      -o-transition: all .35s;
+      -webkit-transition: all .35s;
+      -moz-transition: all .35s;
+      transition: all .35s;
       -webkit-font-smoothing: antialiased;
       &:hover span { /* text pops up when icon hovered */
           bottom: 50px;
@@ -441,10 +422,10 @@ body {
           visibility: hidden;
           opacity: 0;
           line-height: normal;
-          -o-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-          -webkit-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-          -moz-transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-          transition: all .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+          -o-transition: all .35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+          -webkit-transition: all .35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+          -moz-transition: all .35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+          transition: all .35s cubic-bezier(0.68, -0.55, 0.265, 1.55);
           &:before { /* pop-up text arrow */
               content: '';
               width: 0;
@@ -458,11 +439,44 @@ body {
           }
       }
   }
+  &__credits {
+    width: 80%;
+    max-width: 500px;
+    color: white;
+    margin: 0 0 26px 0;
+    &__container {
+      width: 200px;
+      display: flex;
+      flex-direction: column;
+    }
+    &__title {
+      margin: 0;
+      font-size: 1.3rem;
+    }
+    &__row {
+      width: 120px;
+      margin: 6px 0;
+    }
+    &__link {
+      height: 26px;
+      color: rgb(168, 168, 168);
+      line-height: 26px;
+      text-decoration: none;
+      &:hover {
+        color: $blue-secondary;
+        text-decoration: underline;
+      }
+    }
+  }
+  &__row {
+    width: 90%;
+    max-width: 500px;
+    margin: 0 0 26px 0;
+  }
   &__copyright {
-    /* copyright tag */
-      font-family: 'Roboto Slab', sans-serif;
-      font-size: 15px;
-      color: #fff;
+    font-family: 'Roboto Slab', sans-serif;
+    font-size: 15px;
+    color: #fff;
   }
 }
 /* Social Link Colors */
@@ -485,20 +499,18 @@ body {
   .about {
     padding: 100px 0 40px 0;
     &__container {
-      width: 1000px;
+      max-width: 1000px;
     }
     &__title {
-      /* margin: 0 auto; */
       font-size: $header1;
     }
     &__description {
+      max-width: 100%;
       padding: 20px 100px;
       font-size: 1.4rem;
     }
     &__skills {
-      width: 500px;
       font-size: 1.2rem;
-
     }
   }
 
@@ -513,41 +525,50 @@ body {
       }
     }
     &__projects {
-      /* padding: 0 0 120px 0; */
+      &__container {
+        width: 100%;
+        max-width: 1200px;
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        grid-template-rows: repeat(3, 33%);
+      }
     }
     &__project {
-      height: 240px;
-      width: 100%;
-      min-width: 800px;
-      max-width: 1000px;
-      padding: 40px 0;
+      max-width: 100%;
+      padding: 40px auto;
       margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       &__img {
-        height: 100%;
-        width: 40%;
-        max-width: 400px;
+        height: 300px;
+        width: 450px;
+        max-width: 100%;
+        margin: 0;
       }
       &__info {
-        height: 100%;
-        width: 60%;
-        padding: 0;
-        margin: auto;
-        float: right;
+        margin: 0;
       }
       &__title {
         font-size: $header2;
         margin: 0;
       }
       &__description {
-        height: 100px;
-        width: 85%;
+        height: 120px;
+        width: 100%;
         font-size: 1.2rem;
         margin: 0;
         padding: 16px;
       }
+      &__button {
+        font-size: 1.2rem;
+        height: 55px;
+        line-height: 55px;
+        width: 200px;
+      }
     }
     &__certificates {
-
+      padding: 0 0 40px 0;
     }
     &__certificate {
       width: 600px;
@@ -559,8 +580,15 @@ body {
         font-size: $header2;
         margin: 0;
       }
-      &__link {
+    }
+  }
+}
 
+@media only screen and (max-width: 1200px) and (min-width: 880px) {
+  .main {
+    &__project {
+      &__description {
+        height: 130px;
       }
     }
   }
