--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,6 @@ $footer-backround: rgb(31, 31, 31);
 
 body {
   margin: 0;
-  /* background: $black; */
 }
 ::-webkit-scrollbar {
   background: rgb(200, 200, 200);
@@ -135,11 +134,11 @@ body {
     line-height: 1.6em;
     letter-spacing: -1px;
     word-spacing: 2px;
-    animation: fadeUp 200ms ease-out 400ms backwards;
+    animation: fadeUp 200ms ease-out 300ms backwards;
   }
   &__resume {
     height: 50px;
-    width: 150px;
+    width: 200px;
     margin: 20px 0;
     font-size: 1.5rem;
     font-family: "Ubuntu", sans-serif;
@@ -151,9 +150,9 @@ body {
     border: solid 3px $blue-primary;
     text-decoration: none;
     text-align: center;
-    animation: fadeUp 200ms ease-out 600ms backwards;
+    animation: fadeUp 200ms ease-out 400ms backwards;
     &:hover {
-      color: $black;
+      color: $white;
       cursor: pointer;
       background: $blue-primary;
       box-shadow: 0 0 10px 15px $blue-shadow;
@@ -169,7 +168,7 @@ body {
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: repeat(3, 33%);
     gap: 20px 0;
-    animation: fadeUp 200ms ease-out 800ms backwards;
+    animation: fadeUp 200ms ease-out 500ms backwards;
   }
   &__skill {
     &__img {
@@ -194,7 +193,7 @@ body {
   &__container {
     display: flex;
     flex-direction: column;
-    animation: fadeUp 200ms ease 1000ms backwards;
+    animation: fadeUp 200ms ease 750ms backwards;
   }
   &__banner {
     height: 40px;
@@ -257,37 +256,37 @@ body {
       font-family:"K2D", sans-serif;
     }
     &__description {
-      width: 100%;
       max-width: 500px;
       font-size: 1.2rem;
-      line-height: 1.6rem;
       word-spacing: 2px;
       letter-spacing: -1px;
-      vertical-align: middle;
+      line-height: 25px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
     &__button {
-      background-image: linear-gradient(rgb(141, 206, 255) 0, $blue-primary 20%);
-      border-radius: 8px;
-      border-style: none;
-      color: $font-color;
-      cursor: pointer;
-      display: inline-block;
-      font-size: 1.4rem;
-      font-family: "K2D";
-      letter-spacing: 1px;
-      height: 50px;
-      line-height: 50px;
-      margin-left: -4px;
-      outline: 0;
-      text-align: center;
-      transition: all .3s cubic-bezier(.05, .03, .35, 1);
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      vertical-align: bottom;
+      height: 55px;
       width: 200px;
+      margin: 0 0 20px 0;
+      font-size: 1.4rem;
+      font-family: "Ubuntu", sans-serif;
+      line-height: 50px;
+      display: block;
+      color: $font-color;
+      background: $white-background;
+      transition: 0.2s;
+      border-radius: 2rem;
+      border: solid 3px $blue-primary;
+      text-decoration: none;
+      text-align: center;
+      animation: fadeUp 200ms ease-out 600ms backwards;
       &:hover {
-        opacity: .6;
+        color: $white;
+        cursor: pointer;
+        background: $blue-primary;
+        box-shadow: 0 0 10px 15px $blue-shadow;
       }
     }
     &__animate {
@@ -563,12 +562,6 @@ body {
         font-size: 1.2rem;
         margin: 0;
         padding: 16px;
-      }
-      &__button {
-        font-size: 1.2rem;
-        height: 55px;
-        line-height: 55px;
-        width: 200px;
       }
     }
     &__certificates {
